tests/data/good/root_test/abc/root_name.py
from __future__ import annotations

from rizhiy_cfg import CN
from tests.data.good.root_name import cfg

cfg = CN(cfg)
