tests/data/bad/bad_type.py
from __future__ import annotations

from pycs import CN

from ..good.good import cfg

cfg = CN(cfg)
cfg.NAME = 1
